--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chunk-handler": "^1.5.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "underscore": "^1.13.3"
+    "lodash": "^4.17.21",
+    "underscore": "^1.13.3",
+    "union": "^0.5.0"
   }
 }
